--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../dist/jquery.flipster.min.css">
 
     <script src="jquery.min.js"></script>
-    <script src="../dist/jquery.flipster.min.js"></script>
+    <script src="../src/jquery.flipster.js"></script>
 </head>
 <body>
 <header class="main-header">
